holy grail added 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "cSpell.words": [
+        "adipisicing",
+        "amet",
         "Ayelén",
-        "Luan"
+        "consectetur",
+        "elit",
+        "expedita",
+        "Luan",
+        "pariatur",
+        "Voluptatem"
     ]
 }
