--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "consectetur",
         "elit",
         "expedita",
+        "herodiv",
         "Luan",
         "pariatur",
         "strengtheneth",
