--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "herodiv",
         "Luan",
         "pariatur",
+        "sociallinks",
         "strengtheneth",
-        "Voluptatem"
+        "Voluptatem",
+        "Watersport"
     ]
 }
