--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "pariatur",
         "sociallinks",
         "strengtheneth",
+        "Tacuarembo",
         "Voluptatem",
         "Watersport"
     ]
